-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.1.0
-
None
-
3
-
4823
Some connection flags MDSs send to OSSs are, at least, unnecessary. In certain cases, flag bits could be wasted if the corresponding features are not supported by MDSs, since future OSSs may not be able to use the flags bits to reliably determine if an MDS supports the features. This issue was discovered in ORI-22. A list of candidate flags to remove from the connection data can be found in this comment.
- Trackbacks
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....